--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,14 +15,14 @@ spring:
       idle-timeout: 300000
       max-lifetime: 1200000
   
-  # JPA/Hibernate configuration (Enhanced)
+  # JPA/Hibernate configuration (Fixed naming strategy for proper camelCase to snake_case mapping)
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create-drop
       naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+        physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
     show-sql: true
     properties:
       hibernate:
@@ -310,7 +310,12 @@ spring:
 
 external:
   google-books:
-    base-url: http://localhost:8089 # Mock server for testing
+    base-url: http://localhost:8080/test/mock # Use application's own mock endpoint
+    api-key: test-key
+    timeout:
+      connect: 1000
+      read: 2000
+    max-results: 5
 
 logging:
   level:
