--- a/book-service/src/main/resources/application.yaml
+++ b/book-service/src/main/resources/application.yaml
@@ -2,6 +2,15 @@ spring:
   application:
     name: book-service
   
+  # Jackson Configuration - FIX FOR PHASE 2
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
+    deserialization:
+      fail-on-unknown-properties: false
+    default-property-inclusion: non_null
+    time-zone: UTC
+  
   datasource:
     url: jdbc:h2:mem:bookdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
@@ -21,6 +30,32 @@ spring:
     properties:
       hibernate:
         format_sql: false
+    open-in-view: false  # Fix the JPA warning
+
+  # Redis Configuration - NEW FOR PHASE 2
+  redis:
+    host: localhost
+    port: 6379
+    timeout: 60000ms
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
+    cache:
+      type: redis
+      redis:
+        time-to-live: 600000ms  # 10 minutes TTL
+        
+  cache:
+    type: redis
+    cache-names:
+      - books
+      - book-search
+      - external-books
+    redis:
+      time-to-live: 600s  # 10 minutes default TTL
         
   security:
     user:
@@ -65,3 +100,16 @@ logging:
     org.springdoc: DEBUG
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+# Cache Configuration - NEW FOR PHASE 2
+cache:
+  config:
+    books:
+      ttl: 600  # 10 minutes
+      max-size: 1000
+    book-search:
+      ttl: 300  # 5 minutes
+      max-size: 500
+    external-books:
+      ttl: 1800  # 30 minutes
+      max-size: 200
